samples/_failures_safe/1761648970_ab4714_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52dc48ba.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_52dc48ba.c:188:17: error: expected declaration or statement at end of input
  188 |                 if (!neighbor->visited) {
      |                 ^~
./samples/SAFE/__tmp_52dc48ba.c:188:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52dc48ba.c:188:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52dc48ba.c:188:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52dc48ba.c:188:17: error: expected declaration or statement at end of input
